Fix vertical tabs text overflow ellipsis not working

--- a/resources/css/system/_tabs.css
+++ b/resources/css/system/_tabs.css
@@ -59,7 +59,6 @@
   font-size: var(--text-xs);
 
   .tab {
-    display: flex;
     text-align: left;
     padding-block: var(--space-xxs);
     padding-inline: var(--space-sm);
